Bg_Color_Change

--- a/src/styles/FAQs.css
+++ b/src/styles/FAQs.css
@@ -15,7 +15,7 @@
   padding-right: 10rem;
   width: 100%;
   font-family: 'Hind', sans-serif;
-  background: #0a0a0a;
+  background: #000000;
   color: #ffffff;
   display: flex;
   flex-direction: column;
