--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
   padding-top: 2rem;
-  background-color: #0a0a0a;
+  background-color: #000000;
   color: white;
   font-family: sans-serif;
 }
