--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,13 +5,14 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #000000;
     --foreground: #ededed;
   }
 }
 
 html,
 body {
+ 
   max-width: 100vw;
 
 }
