--- a/src/app/team/team.css
+++ b/src/app/team/team.css
@@ -10,7 +10,9 @@ body {
   margin: 0;
   padding: 0;
 }
-
+.teamContainer{
+  overflow: hidden;
+}
 .app-container {
   display: flex;
   flex-direction: column;
