--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -191,7 +191,7 @@
 /* Small Mobile Styles */
 @media (max-width: 480px) {
   .footer-grid {
-    padding: 1rem 0.5rem;
+    padding: .5rem 0.5rem;
   }
 
   .footer-col1,
@@ -201,7 +201,7 @@
 
   .footer-col1 a,
   .footer-col2 a {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
 
   .license {
@@ -210,8 +210,8 @@
   }
 
   .social-icons {
-    gap: 0.75rem;
-    font-size: 1.1rem;
+    gap: 0.5rem;
+    font-size: .8rem;
   }
 }
 
