Navbar:MobileView:Hamburger

--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -178,9 +178,9 @@ body {
   .NavBar {
     margin-left: 0%;
     width: 100vw;
-    padding-top: 1%;
+    padding-top: 2%;
     height: auto;
-    min-height: 8rem;
+    min-height: 10rem;
   }
   
   .logo {
@@ -212,6 +212,11 @@ body {
   .samatavamMeaning {
     width: 90%;
     font-size: 1rem;
+  }
+  .glassNavbarContainer{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-radius: 28px !important;
   }
 }
 
