--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -154,11 +154,16 @@ body {
   font-size: 1.5rem;
   border-radius: 15px;
   border: 4px solid red;
+  
 }
 
 .getTicketBtn button:hover {
-  background-color: rgb(255, 143, 143);
+
+  background-color: red;
   cursor: pointer;
+  box-shadow: 0 0 100px rgba(235, 0, 40,.75);
+  transition: all 0.3s ease-in;
+  transform: scale(1.05);
 }
 
 .samatavamMeaning {
