--- a/src/app/team/team.css
+++ b/src/app/team/team.css
@@ -1,4 +1,10 @@
 /* We're using a single class-based approach for styling */
+*{
+  color:white;
+  font-family: 'Host Grotesk';
+  font-style:normal;
+  line-height: 100%;
+}
 body {
   background-color: #000000; /* a deep gray */
   color: #e5e5e5; /* off-white */
@@ -75,11 +81,13 @@ body {
 }
 
 .group-title {
-  font-size: 1.5rem; /* Smaller font size */
-  font-weight: bold;
+  padding: 5rem;
+  font-size: 6rem !important; /* Smaller font size */
+  font-weight: 400;
   margin-top: 1.5rem;
   margin-bottom: 0.5rem;
-  text-align: center;
+  text-align: left;
+  letter-spacing: -0.18rem;
   width: 100%;
 }
 
@@ -102,7 +110,7 @@ body {
 .carousel-slide {
   position: relative;
   display: inline-block;
-  width: 10rem; /* Smaller card size on mobile */
+  width: 9rem; /* Smaller card size on mobile */
   height: 14rem;
   flex-shrink: 0;
   background-color: #262626; /* darker gray */
@@ -118,7 +126,7 @@ body {
 
 .card-image {
   width: 100%;
-  height: 100%;
+  aspect-ratio: 540/720;
   object-fit: cover;
 }
 
@@ -134,7 +142,8 @@ body {
 
 .image-text h3 {
   font-weight: 600;
-  font-size: 0.875rem; /* Smaller font size */
+  padding: 2rem;
+  font-size: 3rem; /* Smaller font size */
   margin: 0;
 }
 
@@ -210,7 +219,7 @@ body {
     padding: 1rem;
   }
   .carousel-slide, .static-card {
-    width: 20rem;
-    height: 24rem;
+    width: 33.7rem;
+    height: 45rem;
   }
 }
