--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -120,7 +120,7 @@ body {
 
 .logoTextButtonContainer {
   aspect-ratio: 1/1;
-  height: 60%;
+  height: 10%;
   z-index: 2;
   position: relative;
   display: flex;
@@ -129,8 +129,8 @@ body {
   align-items: center;
 }
 
-.logoText {
-  transform: scale(1.4);
+.logoText{
+  transform: translateY(20%) scale(1.4);
 }
 
 .addressText {
@@ -207,7 +207,7 @@ body {
   }
   
   .logoText {
-    transform: translateY(10%) scale(0.6);
+    transform: translateY(20%) scale(.85);
   }
   
   .addressText {
