--- a/src/styles/FAQs.css
+++ b/src/styles/FAQs.css
@@ -37,16 +37,17 @@
 .faq-accordion {
   position: relative;
   width: 100%;
-  max-width: 800px;
+  width: 90%;
   margin: 0 auto;
 }
 
 .faq-accordion-item {
-  border-bottom: 1px solid #e5e5e5;
+  width: 100%;
+  border-bottom: 1px solid #e5e5e513;
 }
 
 .faq-accordion-item .faq-button.faq-expanded {
-  border-bottom: 1px solid #e6ff037a;
+  border-bottom: 1px solid #eb002796;
 }
 
 .faq-button {
@@ -55,7 +56,7 @@
   text-align: left;
   width: 100%;
   /* Responsive padding */
-  padding: clamp(0.8rem, 2vw, 1rem) 0;
+  padding: clamp(1.8rem, 2vw, 1rem) 0;
   color: #ffffff;
   /* Responsive font size */
   font-size: clamp(1rem, 3vw, 1.5rem);
@@ -70,7 +71,7 @@
 .faq-button:hover,
 .faq-button:focus {
   cursor: pointer;
-  color: #03b5d2;
+  color: white;
 }
 
 .faq-button:hover .faq-icon,
@@ -104,11 +105,11 @@
 }
 
 .faq-button.faq-expanded {
-  color: #ffee06;
+  color: #eb0027;
 }
 
 .faq-button.faq-expanded .faq-icon {
-  color: #fffb00;
+  color: #eb0028;
 }
 
 .faq-accordion-content {
