--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -108,6 +108,23 @@ body {
   left: 50%;
   animation: mandalaHero 100s linear infinite forwards;
 }
+.heroInnerMandala{
+  width: 50vw;
+  height: 80vh;
+  transform: translate(-50%, -50%) scale(1.3);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+    animation: mandalaInnerHero 100s linear infinite forwards;
+}
+@keyframes mandalaInnerHero {
+  0% {
+    transform: translate(-50%, -50%) scale(1.3) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1.3) rotate(-360deg);
+  }
+}
 
 @keyframes mandalaHero {
   0% {
@@ -205,7 +222,23 @@ body {
     width: 250vw;
     height: auto;
   }
-  
+  .heroInnerMandala{
+  width: 50vw;
+  height: 80vh;
+  transform: translate(-50%, -50%) scale(1.3);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+    animation: mandalaInnerHero 100s linear infinite forwards;
+}
+@keyframes mandalaInnerHero {
+  0% {
+    transform: translate(-50%, -50%) scale(2.7) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(2.7) rotate(-360deg);
+  }
+}
   .logoText {
     transform: translateY(20%) scale(.85);
   }
